# STU-B-RRM-002-MoveIt

abb_eef_moveit_conf/: CMakeLists.txt  package.xml
abb_eef_moveit_conf/config/: abb_irb4600_w_eef.srdf  fake_controllers.yaml  gazebo_abb_irb4600_w_eef.urdf  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml
abb_eef_moveit_conf/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
abb_experimental/abb_irb4600_support/urdf/: irb4600_60_205_w_eef.xacro  irb4600_60_205_w_eef_macro.xacro
zad2/: CMakeLists.txt  package.xml  positions
zad2/include/zad2/geometry_msgs_ext/: geometry_msgs_extensions.h
zad2/include/zad2/trajectory/: plan_interface.h
zad2/launch/: zad2_core.launch  zad2_machine.launch
zad2/src/model/: model_publisher_node.cpp
zad2/src/trajectory/: plan_interface.cpp  trajectory_plan_node.cpp
zad2_eef/eef_simple/: CMakeLists.txt  package.xml
zad2_eef/eef_simple/config/: moveit.rviz
zad2_eef/eef_simple/launch/: load_eef_simple.launch  test_eef_simple.launch
zad2_eef/eef_simple/meshes/visual/: simple_effector.stl
zad2_eef/eef_simple/urdf/: eef_simple.xacro  eef_simple_macro.xacro
zad2_models/: CMakeLists.txt  package.xml
