<?xml version="1.0"?>
<package format="2">
  <name>zad2</name>
  <version>0.0.0</version>
  <description>The zad2 package</description>

  <maintainer email="xsykorka@stuba.sk">Marek Sykorka</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ros_planning_interface</depend>

  <export>
  </export>
</package>
